# pytorch_geometric

./: .codeclimate.yml  .coveragerc  .env  .gitattributes  .gitignore  .isort.cfg  .mdlrc  .pre-commit-config.yaml  .style.yapf  .travis.yml  .yamllint.yml  1.docx  CHANGELOG.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  LICENSE  MANIFEST.in  Project Milestone.ipynb  README.md  bench_lcm.py  blog_draft  blog_draft.md  codecov.yml  container_test_logs.txt  dev.ipynb  dist_cpu-node0.txt  docs.sh  f.txt  faust.py  finetuning_demo_logs.txt  fixed_demo_logs.txt  gmixup_blog.ipynb  graphdisplay.js  hostfile  hosts  index.json  info.json  learn_physic_model.py  local_test_logs.txt  (+26 more)
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  config.yml  documentation.md  documentation.yml  feature-request.md  feature-request.yml  installation.md  installation.yml  question-help.md  refactor.md  refactor.yml
.github/workflows/: _testing.yml  auto-merge.yml  benchmark.yml  building-conda.yml  building-pyg-conda.yml  building-rusty1s-conda.yml  building_nightly.yml  building_pyg_conda.yml  building_rusty1s_conda.yml  changelog.yml  codeql-analysis.yml  codeql_analysis.yml  dist_testing.yml  documentation.yml  examples.yml  full_gpu_testing.yml  full_testing.yml  install.yml  labeler.yml  latest_testing.yml  linting.yml  main.yml  minimal_testing.yml  nightly.yml  oldest_testing.yml  outdated_testing.yml  prev_testing.yml  rag_testing.yml  setup.yml  stale.yml  test-base.yml  test_rag.yml  (+10 more)
alpha/: cora_random_walk.py  cuneiform.py  enzymes.py  enzymes2.py  kitti.py  mnist_mlpconv.py  modelnet10.py  modelnet10_2.py  modelnet10_pc.py  modelnet10_rand_aug_pc.py  modelnet10_rand_pc.py  modelnet40.py  modelnet40_rand_pc.py  qm9.py  shapenet.py
benchmark/: README.md  benchmark_basic_gnns.py  setup.py
benchmarks/: HASHFILE.txt  README.md  asv.conf.json  environment.yml
convolutions/: gcn.py
datasets/: faust.py
docker/: Dockerfile  Dockerfile.xpu  README.md  Readme.md  singularity
docs/: .gitignore  Makefile  README.md  additional_requirements.txt  index.html  make.bat  requirements.txt  requirements_1.txt  requirements_2.txt
esan_demo/: conv.py  csl_data.py  exp_cexp_data.py  main.py  utils.py
examples/: DimenetPP-2021-ESOL.ipynb  LLM_plus_GNN.py  MTTM.py  README.md  __init__.py  afp.py  agnn.py  ar_link_pred.py  argo.py  argva_node_clustering.py  arma.py  attentive_fp.py  attract_repel_wrapper.py  autoencoder.py  basic_training_with_hierarchical_sampling.py  bigclam_detection.py  captum_explainability.py  captum_explanation.py  citeseer.py  cluster_gcn.py  cluster_gcn_ppi.py  cluster_gcn_reddit.py  cluster_tvgnn_cora.py  cmpnn.py  coft.py  coft_highlighting.py  cognn.py  colors_topk_pool.py  cora.py  cora_agnn.py  cora_classification.py  cora_diffnorm.py  cora_gat.py  cora_gcn.py  cora_pmlp.py  cora_train.py  correct_and_smooth.py  cugraph_data.py  cuneiform.py  cuneiform2.py  (+261 more)
examples/cpp/: CMakeLists.txt  README.md  main.cpp  save_model.py
examples/llm/tape/: README.md  generate.py  pyproject.toml  train.py  train_config.yaml
examples/llm/tape/tape/: config.py  gnn_model.py  utils.py
examples/llm/tape/tape/dataset/: dataset.py  lm_encoder.py  utils.py
examples/llm/tape/tape/dataset/llm/: engine.py
examples/llm/tape/tape/dataset/llm/offline/: base.py  ogbn_arxiv.py  prompt.jinja  pubmed.py
examples/llm/tape/tape/dataset/llm/online/: __init__.py  base.py  cache.py  ogbn_arxiv.py  pubmed.py  response_model.jinja
examples/llm/tape/tape/dataset/parser/: __init__.py  base.py  ogbn_arxiv.py  pubmed.py
examples/llm/tape/tape/trainer/: gnn_trainer.py
examples_gana/: debug.py  debug_gcn_result.csv  debug_ppi_result.csv  gana_gat.py  gana_gcn.py  gana_gcn2_ppi.py  gana_gcn_cheby.py  gana_gcn_edge_weight.py  gana_gcn_visualize.py  gana_ppi.py  gana_rgat.py  gana_rgcn.py  gana_sage.py  regresssion.py
graph/: geometry.py  grid.py
graphgym/: LICENSE  agg_batch.py  ben_utils.py  configs_gen.py  configure.py  main.py  parallel.sh  requirements.txt  run_batch.sh  run_batch_ringtransfer.sh  run_batch_ringtransfer_GPU_DELAY.sh  run_batch_ringtransfer_GPU_VANILLA.sh  run_experiments_29.09.sh  run_main.py  run_single.sh  setup.py
nn/: utils.py
script/: conda.sh
sparse_transformer/: README.md  base_model_ViT.py  base_sparse_transformer.py  requirement.txt  sparse_messages.py  sparse_transformer.py
svm/: __init__.py  kernel_evaluation.py  main.py
techqa/: train.json
test/: __init__.py  conftest.py  test_compile.py  test_config_mixin.py  test_config_store.py  test_data.py  test_debug.py  test_detector_offline.py  test_edge_index.py  test_experimental.py  test_graclus.py  test_hash_tensor.py  test_home.py  test_index.py  test_inspector.py  test_isinstance.py  test_onnx.py  test_seed.py  test_spa_pool.py  test_txt2kg_bridge.py  test_typehint.py  test_typehinting.py  test_typing.py  test_uncertainty_techqa.py  test_validate.py  test_voxel_grid.py  test_warnings.py
torch_geometric/: __init__.py  _compile.py  _onnx.py  backend.py  compile.py  config_mixin.py  config_store.py  debug.py  deprecation.py  device.py  dummy.py  edge_index.py  experimental.py  hash_tensor.py  home.py  index.py  inspector.py  isinstance.py  lazy_loader.py  lib.py  logging.py  resolver.py  seed.py  template.py  testing.py  tp.py  typing.py  validate.py  warnings.py
torch_geometric/distributed/client_server/: CMakeLists.txt  README.txt
torch_geometric/distributed/client_server/client/: CMakeLists.txt
torch_geometric/distributed/client_server/client/py/: rocksdb_feature_store.py
torch_geometric/distributed/client_server/client/src/: main.cpp
torch_geometric/distributed/client_server/proto/: CMakeLists.txt  __init__.py.cmake  setup.py.cmake
torch_geometric/distributed/client_server/proto/proto/: common.proto  service.proto
torch_geometric/distributed/client_server/server/: CMakeLists.txt
torch_geometric/distributed/client_server/server/src/: encoder.cpp  encoder.h  main.cpp  table_store.cpp  table_store.h
(+32020 files in other folders)
