[metadata]
long_description=file: README.md
long_description_content_type=text/markdown

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[aliases]
test=pytest

[tool:pytest]
addopts = --capture=no
filterwarnings=ignore::DeprecationWarning:tensorboard.*

[flake8]
ignore=F811,W503,W504  # ignore overload redefinition, allow line breaks before/after binary operators

[isort]
multi_line_output=3
include_trailing_comma = True
skip=.gitignore,__init__.py

[pylint.'MESSAGES CONTROL']
disable=import-outside-toplevel,missing-module-docstring,missing-class-docstring,missing-function-docstring,empty-docstring,import-error,too-many-arguments,arguments-differ,invalid-name,redefined-builtin
attr-rgx=[A-Za-z_][A-Za-z0-9_]*$
argument-rgx=[A-Za-z_][A-Za-z0-9_]*$
variable-rgx=[A-Za-z_][A-Za-z0-9_]*$
generated-members=torch.*
