[metadata]
long_description=file: README.md
long_description_content_type=text/markdown

classifiers=
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[aliases]
test=pytest

[flake8]
ignore=
    # ignore overload redefinition
    F811,
    # allow line breaks before/after binary operators
    W503, W504,
